# general-illustrations

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
crates/general-illustrations-cli/: Cargo.toml
crates/general-illustrations-cli/src/: main.rs
crates/general-illustrations-core/: Cargo.toml
crates/general-illustrations-core/src/: lib.rs
crates/general-illustrations-minimax/: Cargo.toml
crates/general-illustrations-minimax/src/: lib.rs
crates/general-illustrations-skill-renderer/: Cargo.toml
crates/general-illustrations-skill-renderer/src/: lib.rs
crates/general-illustrations-skill-spec/: Cargo.toml
crates/general-illustrations-skill-spec/src/: lib.rs
docs/: architecture.md  codelabs.md  design.md  gallery-design.md  skill-generation-design.md  tasks.md
docs/codelabs/: skill-generation.md
gallery/: gallery.json  index.html  styles.css
skill/general-illustrations/: SKILL.md
skill/general-illustrations/agents/: openai.yaml
skill/general-illustrations/references/: article-illustration.md  code-review-visual.md  composition-patterns.md  prompt-template.md  qa-checklist.md  selection-guide.md  style-dna.md  style-packs.md  styles.md  technical-diagram.md
specs/: general-illustrations.json
