[workspace]
resolver = "3"
members = [
    "crates/general-illustrations-core",
    "crates/general-illustrations-minimax",
    "crates/general-illustrations-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Shuozeli/general-illustrations"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

